kubernetes/bank-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-deployment
  namespace: bank
  labels:
    app: bankapp
spec:
  replica: 3
  selector:
    matchLabels:
      app: bankapp
  template:
    metadata:
        labels:
          app: bankapp
    spec:
      containers:
      - name: mybank
        image: swayamnakshane/mybank:latest
        ports:
        - containerPort: 8080
        environment:
        - name: SPRING_DATASOURCE_USERNAME
          valueFrom:
            configMapKeyRef:
               name: bank-config
               key: SPRING_DATASOURCE_USERNAME
        - name: SPRING_DATASOURCE_URL
          valueFrom:
            configMapKeyRef:
               name: bank-config
               key: SPRING_DATASOURCE_URL
        - name: SPRING_DATASOURCE_PASSWORD
          valueFrom:
            configMapKeyRef:
               name: bank-secret
               key: SPRING_DATASOURCE_PASSWORD
          resources:
          limits:
            cpu: "1"
            memory: "512Mi"
          requests:
            cpu: "0.5"
            memory: "256Mi"
