kubernetes/bankapp-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: bank-deployment
  namespace: bank
  labels:
    app: bankapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bankapp
  template:
    metadata:
      labels:
        app: bankapp
    spec:
      containers:
      - name: bank-pod
        image: swayamnakshane/mybank:latest
        ports:
          - containerPort: 8080
     

        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
