kubernetes/bank-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bank-service
  namespace: bank
spec:
  selector:
    app: bankapp
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
