kubernetes/bankapp-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: bank-svc
  namespace: bank
spec:
  selector:
    app: bankapp
  ports:
    - protocol: TCP
      targetPort: 8080
      port: 8080
      nodePort: 30080
  type: NodePort
