kubernetes/mysql-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: mysql
  namespace: bank
  labels:
    app: mysql
spec:
  clusterIP: None
  selector:
    app: mysql 
  ports:
   - protocol: TCP
     targetPort: 3306
     port: 3306
