kubernetes/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: bank
spec:
  clusterIp: None
  selector:
    app: sqlapp
  ports:
  - protocol: TCP
    port: 3306 
    targetPort: 3306
